# progen

./: .gitignore  generate_data.py  pyproject.toml  train.py
configs/data/: default.toml
configs/model/: default.toml
